# secs

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  run-bench.sh  run.sh
cmake/: TestHelpers.cmake
doc/: SPECS.md  design.qmodel  lifecycle.graphml  logic.graphml  seqdia.txt
script/: generate.sh
scripts/: build.ps1  build.sh
src/: CMakeLists.txt
src/benchmarks/: StorageBenchmarks.cpp
src/gtests/: EngineTests.cpp
src/lib/secs/: bits.h  componentflagsmanager.cpp  componentflagsmanager.h  componentmanager.h  componentstorage.h  componenttraits.cpp  componenttraits.h  config.h  dynamicbitset.h  eidstorage.cpp  eidstorage.h  engine.h  entity.cpp  entity.h  entitymanager.h  entityobserver.cpp  entityobserver.h  entityprocessor.cpp  entityprocessor.h  entitysystem.cpp  entitysystem.h  secs.h  system.cpp  system.h  systemmanager.cpp  systemmanager.h
src/lib/secs/ai/: componentbehaviour.h  iagentcontroller.cpp  iagentcontroller.h
src/test/: tst-engine.cpp
